# BMS_app

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp
.qtcreator/: CMakeLists.txt.user.FkGDvD
BLE/: BleConnection.cpp  BleConnection.h  BleConnectionWorker.cpp  BleConnectionWorker.h  bledevice.h  blemanager.cpp  blemanager.h  blescannerworker.cpp  blescannerworker.h
